spring-cloud-sample/spring-cloud-zuul/src/main/jkube/sc-zuul-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sc-zuul-ingress
  namespace: bjrdc-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20M"
spec:
  rules:
  - host: ingress.bjrdc17
    http:
      paths:
      - path: /sc-zuul
        backend:
          serviceName: spring-cloud-zuul
          servicePort: 8084
